# chatai

./: .gitignore  README.md  TODO.txt  pyproject.toml  query_history.json  reply.txt  reply2.txt  reply_20240604114117.txt  reply_20240604183437.txt  reply_20240604183501.txt  reply_20240604183608.txt  reply_20240604183823.txt  reply_20240604184227.txt  reply_20240701001737.txt  reply_20240701002017.txt  reply_20240701002154.txt  reply_20240701002219.txt  reply_20240701002610.txt  reply_memory.txt  sample_settings.toml
chat/: chat.py  chatui.py
chats/: 2024-07-01_00-42-19.json  2024-07-01_00-42-30.json
